added tests & code coverage

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,10 @@
 output: rmarkdown::github_document
 ---
 
+[![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/0.1.0/active.svg)](http://www.repostatus.org/#active) 
+[![Travis-CI Build Status](https://travis-ci.org/hrbrmstr/simplemagic?branch=master)](https://travis-ci.org/hrbrmstr/simplemagic) 
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/hrbrmstr/simplemagic?branch=master&svg=true)](https://ci.appveyor.com/project/hrbrmstr/simplemagic) 
+
 # simplemagic
 
 Lightweight File 'MIME' Type Detection Based On Contents or Extension
